<resources>
    <string name="app_name">Cooler Controller</string>

    <string name="snav_cooler">Cooler</string>
    <string name="snav_cloud">Cloud</string>
    <string name="snav_gps">GPS</string>
    <string name="snav_share">Share</string>
    <string name="snav_help">Help</string>
    <string name="snav_text">Medical Transport Cooler App</string>
    <string name="snav_credit">Design by Taylor Ngo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="frag_cool">Cooler Fragment</string>
    <string name="frag_cloud">Cloud Fragment</string>
    <string name="frag_gps">GPS Fragment</string>
    <string name="frag_help">Help Fragment</string>

    <string name="default_temp">20</string>
    <string name="temp_unit">&#176;C</string>

    <string name="toast_button_text">Update System</string>
    <string name="toast_output">System Updated!</string>

    <string name="random_button_text">Random</string>
    <string name="count_button_text">Count</string>
    <string name="temp_up_button">Up</string>
    <string name="temp_down_button">Down</string>
    <string name="nav_image_text">Android App Image</string>

    <string name="user_manual">Howdy, welcome to the </string>
    <string name="tracker">Tracker</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="endis_BT">I/O Bluetooth</string>
    <string name="endis_DSCV">I/O Discoverability</string>
    <string name="endis_discover">Discover</string>
    <string name="rationale_bluetooth">This app needs access to your bluetooth to connect to the cooler.</string>
    <string name="rationale_location">This app needs access to your location to track the cooler.</string>
    <string name="launch_activity">Launch activity</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>

    <string name="location_message_title">Location services not enabled</string>
    <string name="location_message">You cannot record your metrics without location services.\nTurn on location services now?</string>
    <string name="affirmative">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cont">Continue</string>
    <string name="start_conn">Start Connection</string>

</resources>