<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cooler"
            android:icon="@drawable/ic_cooler"
            android:title="@string/snav_cooler" />
        <item
            android:id="@+id/nav_cloud"
            android:icon="@drawable/ic_cloud"
            android:title="@string/snav_cloud" />
        <item
            android:id="@+id/nav_gps"
            android:icon="@drawable/ic_gps"
            android:title="@string/snav_gps" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/snav_help" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/snav_share" />
        </menu>
    </item>

</menu>